--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,12 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.21
 yarn_mappings=1.21+build.9
-loader_version=0.15.11
+loader_version=0.16.9
 
 # Mod Properties
-mod_version=1.12.0
+mod_version=1.13.0
 maven_group=me.reimnop
-jar_name=discord4fabric
+jar_name=discord4fabricMulti
 
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
